# cpp-assignment--Sharifullin-

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: memcheck.yml  tests.yml
hw01/src/: CMakeLists.txt  hw01.cpp
hw01/src/include/: hw01.h
hw01/tests/: CMakeLists.txt  hw01_test.cpp
hw02/src/: CMakeLists.txt  hw02.cpp
hw02/src/include/: hw02.h
hw02/tests/: CMakeLists.txt  hw02_test.cpp
hw03/src/: CMakeLists.txt  hw03.cpp
hw03/src/include/: hw03.h
hw03/tests/: CMakeLists.txt  hw03_test.cpp
hw04/src/: CMakeLists.txt  hw04.cpp
hw04/src/include/: hw04.h
hw04/tests/: CMakeLists.txt  hw04_test.cpp
hw05/: practise
hw05/src/: CMakeLists.txt  hw05.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
hw05/src/include/: hw05.h
hw05/tests/: CMakeLists.txt  hw05_test.cpp
hw06/src/: CMakeLists.txt  hw06.cpp
hw06/src/include/: hw06.h
hw06/tests/: CMakeLists.txt  hw06_test.cpp
